2001-07-25  Philippe Elie  <ph_e@club-internet.fr>

	* dae/op_start: beautify the output of op_start --help
	* pp/op_to_source: ditto. better argument checking.

	* pp/oprof_convert.c:
	* pp/oprofpp.h:
	* dae/oprofiled.h: fix problem with opd_footer, don't bump 
	  opd_footer version number !

2001-07-25  John Levon  <moz@compsoc.man.ac.uk>

	* pp/Makefile.in:
	* pp/oprof_convert.c: convert to v4
 
	* pp/oprofpp.c: use opd_strdup
	 
2001-07-25  John Levon  <moz@compsoc.man.ac.uk>

	* dae/opd_util.c: small tidy
 
2001-07-24  Philippe Elie  <ph_e@club-internet.fr>

	* dae/opd_util.c:
	* dae/opd_util.h: add relative path name to absolute path name stuff
	* pp/oprofpp.c: use it.
	* pp/op_to_source: simplify code to reflect above change.

2001-07-25  John Levon  <moz@compsoc.man.ac.uk>

	* dae/opd_proc.c: fix uninitialised pointer access (reported by
	<bobm@fc.hp.com>) that could segfault oprofile in case of
	module load/unload activity

	* Makefile.in:
	* dae/opd_proc.c:
	* dae/opd_util.c:
	* dae/opd_util.h:
	* dae/oprofiled.c:
	* dae/oprofiled.h:
	* pp/Makefile.in:
	* pp/oprofpp.c:
	* pp/oprofpp.h: use mtime() instead of md5sum(). Still doesn't handle
	  "./a; gcc -o a a.c; ./a"
 
2001-07-22  Philippe Elie  <ph_e@club-internet.fr>

	* doc/oprofile.1.in:
	* doc/oprofile.sgml:
	* pp/opf_filter.h:
	* pp/opf_filter.cpp:
	* pp/opf_container.cpp: implement and document filtering for assembly
	  output.

2001-07-21  Philippe Elie  <ph_e@club-internet.fr>
 
 	* doc/oprofile.sgml:
 	* gui/oprofile:
 	* oprofile.c: remove edge_detect support.
 
 	* pp/oprofpp.c: check counter range for each event type.
 	* oprofile.c: ditto.
 	* gui/oprofile: ditto and save setup for each event type.
 	* oprofile.h: op_check_range() : display the allowed range.

2001-07-18  Philippe Elie  <ph_e@club-internet.fr>
 
	* dae/op_start: disable all counters before starting the setup.

2001-07-18  John Levon  <moz@compsoc.man.ac.uk>
